--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -26,9 +26,13 @@ android {
     }
 }
 
+ext {
+    supportLibVersion = project.hasProperty("defaultSupportLibVersion") ? defaultSupportLibVersion : "23.3.0"
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.android.support:recyclerview-v7:23.2.0'
+    compile "com.android.support:appcompat-v7:${supportLibVersion}"
+    compile "com.android.support:recyclerview-v7:${supportLibVersion}"
     compile project(':library')
 }
